# ConfIDent_schema

./: .cruft.json  .gitignore  404.html  CONTRIBUTING.md  ConfIDent_schema_excelgen_0.0.1.xlsx  Makefile  README.md  about.yaml  confident_schema.py  contact.md  index.html  mkdocs.yml  project.Makefile  pyproject.toml  sitemap.xml
AcademicEvent/: index.html
AcademicEventSeries/: index.html
AcademicEventSeries_academic_fields/: index.html
AcademicEventSeries_context_info/: index.html
AcademicEventSeries_doi/: index.html
AcademicEventSeries_dpbl_id/: index.html
AcademicEventSeries_gnd_id/: index.html
AcademicEventSeries_id/: index.html
AcademicEventSeries_landing_page/: index.html
AcademicEventSeries_metrics/: index.html
AcademicEventSeries_organizers/: index.html
AcademicEventSeries_process_name/: index.html
AcademicEventSeries_publications/: index.html
AcademicEventSeries_sponsors/: index.html
AcademicEventSeries_topics/: index.html
AcademicEventSeries_website/: index.html
AcademicEventSeries_wikicfp_id/: index.html
AcademicEventSeries_wikidata_id/: index.html
AcademicEvent_academic_fields/: index.html
AcademicEvent_context_info/: index.html
AcademicEvent_doi/: index.html
AcademicEvent_dpbl_id/: index.html
AcademicEvent_gnd_id/: index.html
AcademicEvent_id/: index.html
AcademicEvent_landing_page/: index.html
AcademicEvent_metrics/: index.html
AcademicEvent_organizers/: index.html
AcademicEvent_process_name/: index.html
AcademicEvent_publications/: index.html
AcademicEvent_sponsors/: index.html
Address/: index.html
(+837 files in other folders)
