[tool.poetry]
name = "ConfIDent_metadata_schema"
version = "0.1.0"
description = "The metadata schema for the COnfIDent project"
authors = ["Philip Strömert <philip.stroemert@tib.eu>"]
license = "CC-BY 4.0"
include = ["README.md", "src/linkml", "project"]

[tool.poetry.dependencies]
python = "^3.9"
linkml-runtime = "^1.1.24"
linkml = "^1.2.11"

[tool.poetry.dev-dependencies]
linkml = "^1.2.6"
mkdocs-material = "^8.2.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
