[tool.poetry]
name = "ConfIDent_schema"
version = "0.5.0"
description = "This is a schema for the ConfIDent project that describes the necessary metadata requirements of academic events and event series."
authors = ["Philip Strömert <philip.stroemert@tib.eu>"]
license = "CC-BY 4.0"
readme = "README.md"
include = ["README.md", "src/ConfIDent_schema/schema", "project"]

[tool.poetry.dependencies]
python = "^3.9"
linkml-runtime = "^1.1.24"

[tool.poetry.dev-dependencies]
linkml = "^1.3.5"
mkdocs-material = "^8.2.8"
mkdocs-mermaid2-plugin = "^0.6.0"
schemasheets = "^0.1.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
docs = ["linkml", "mkdocs-material"]